--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,7 +10,7 @@ steps:
   - image
   - deployment
   - ovnis-api
-  - web=gcr.io/$PROJECT_ID/ovnis-api:$BUILD_ID
+  - ovnis-api=gcr.io/$PROJECT_ID/ovnis-api:$BUILD_ID
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
   - 'CLOUDSDK_CONTAINER_CLUSTER=ovnis-cluster'
